<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 points</string>
    <string name="free_throw">free throw</string>
    <string name="_2_points">+2 points</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
    <string name="the_winner">The Winner</string>
    <string name="teamB_wins">TEAM B WINS</string>
    <string name="teamA_wins">TEAM A WINS</string>
    <string name="draw">DRAW</string>
</resources>
